# FeelUOwn

./: .gitignore  .metadata.yml  .pylintrc  .readthedocs.yaml  .travis.yml  AGENTS.md  AGETNS.md  CHANGELOG.rst  LICENSE  Makefile  NetEaseMusic.desktop  README.en.md  README.html  README.md  README.rst  api.py  app.sh  basic.qss  changelog.rst  config.yaml  controllers.py  controllers.py~  generateDesktopIcon.sh  generateSphinxDoc.sh  generate_sphinx_docs.sh  higherapi.py  install.py  install.sh  main.py  makefile  models.py  mpv.py  mpv_old.py  neteasemusic.desktop  player.py  pyproject.toml  readme.md  requirements.txt  run_test.sh  setting.py  (+8 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feeluown-enhancement-proposal.md
.github/workflows/: appimage-release.yml  build.yml  feeluown.yml  macos-release.yml  pypi-release.yml  tg-notify.yml  win-release.yml
appimage_recipe/: application.desktop  application.xml  entrypoint.sh  requirements.txt
cache/: readme.md
data/: help.html  test.m4a  test.webm
docs/: Makefile  requirements.txt  播放器设计.md  数据模型.md  架构设想.md  架构设想.md~  需求分析.md  需求分析.md~  需求分析2.0.md
docs/plans/: 2026-05-09-proxy-status-design.md  2026-05-09-proxy-status-implementation.md
docs/source/: api.rst  arch.rst  coding_style.rst  conf.py  contributing.rst  design.rst  dev_best_practice.rst  dev_quickstart.rst  faq.rst  features.rst  fuorc.rst  glossary.rst  index.rst  media_assets_management.rst  media_assets_management_v1.rst  memory_debugging.rst  philosophy.rst  protocol.rst  quickstart.rst  research.rst  roadmap.rst
docs_core/: Makefile
docs_core/source/: conf.py  design.rst  index.rst
examples/: README.en.md  README.md  demo.qml  library_basic_usage.py  macos_native_titlebar.py  macos_nowplaying.py  model_display.py  qml_inside_qwidget.py  shell.py
examples/research/: aio_tcp_server.py  bench_getattr.py  collection_toc.py  mpv_qtwidget_opengl.py  mpv_render.py  multiple_inheritance.py  thread_tcp_server.py
feeluown/: __init__.py  __main__.py  ai.py  alert.py  app.py  argparse.py  argparser.py  browser.py  cache.py  cli.py  cliapp.py  collection.py  compat.py  config.py  constants.py  consts.py  controller_api.py  controllers.py  debug.py  default.qss  default_config.yaml  download.py  dsl.py  excs.py  fm.py  fmplaylist.py  fuoexec.py  get_mimetypes.sh  global_hotkey_mac.py  glue.py  guiapp.py  helpers.py  hotkey.py  image.py  img_ctl.py  install.py  introspect.xml  left_widget.py  light.qss  logger.py  (+32 more)
feeluown/ai/: __init__.py  ai.py  copilot.py  llm.py  matcher.py  models.py  playback.py  prompt.py  radio.py  radio_agent.py  v1.py
feeluown/app/: __init__.py  app.py  args.py  cli_app.py  config.py  gui_app.py  mixed_app.py  mode.py  server_app.py
feeluown/base/: logger.py  models.py  network_manger.py  player.py  utils.py
feeluown/c/: focus_manager.py  modes.py  tips_manager.py  version_manager.py
feeluown/cli/: __init__.py  cli.py  install.py
feeluown/cmds/: __init__.py  base.py  help.py  player.py  playlist.py  search.py  show.py  status.py
feeluown/components/: __init__.py  cmdbox.py  collection.py  collections.py  history.py  library.py  my_music.py  playlist.py  playlists.py  provider.py  searchbox.py  separator.py  songs.py  songs_table.py  textlist.py  volume_button.py
feeluown/containers/: README.rst  bottom_panel.py  cmdbox.py  collection.py  left_panel.py  magicbox.py  mpv_widget.py  player_control_panel.py  plugin.py  right_panel.py  table.py  table_container.py  top_panel.py
feeluown/controllers/: focus_manager.py  modes.py  tips_manager.py  version_manager.py
feeluown/entry_points/: base.py  run.py  run_app.py  run_cli.py
feeluown/fuoexec/: __init__.py  functions.py  fuoexec.py  signal_manager.py
feeluown/gui/: __init__.py  base_renderer.py  browser.py  consts.py  debug.py  drawers.py  helpers.py  hotkey.py  image.py  macos_titlebar.py  mimedata.py  provider_ui.py  qml_show.py  theme.py  thumbnail_cache.py  tips.py  tray.py  ui.py  video_show.py  watch.py
feeluown/i18n/: CONTRIBUTING.md  __init__.py
feeluown/icons/: tray.psd
feeluown/linux/: README.md  __init__.py  introspect.xml  mpris2.py
feeluown/local/: __init__.py  db.py  lans_helpers.py  provider.py  provider_ui.py  schemas.py  ui.py
feeluown/lyric/: __init__.py  live_lyric.py  lyric.py
feeluown/models/: __init__.py  base.py  models.py  models_v2.py  uri.py
feeluown/nowplaying/: __init__.py  global_hotkey_mac.py  macos.py  nowplaying.py
feeluown/player/: __init__.py  ai_radio.py  base_player.py  delegate.py  fm.py  fm_candidates.py  lyric.py  metadata.py  mpvplayer.py  (+6 more)
fuocore/: .gitignore  __init__.py  aio.py  aio_tcp_server.py  dispatch.py  excs.py  library.py  live_lyric.py  lyric.py  media.py  models.py  mpvplayer.py  player.py  playlist.py  protocol.py  provider.py  pubsub.py  reader.py  router.py  utils.py
history_research/: asyncio_test.py  asyncio_test2.py  asyncio_test_coroutines.py  linux.py  python-xlib-learn.py  setting_widget.py  tracks_widget.py  trayicon.py
icons/: FeelUOwn.icns  FeelUOwn.psd  README.md  mask copy.psd  mask.psd
integration-tests/: run.py
pyinstaller_hooks/: hook-feeluown.py
research/: aio_tcp_server.py  mpv_qtwidget_opengl.py
sphinx_doc/: Makefile  make.bat
src/: api.py  constants.py  controller_api.py  controllers.py  interfaces.py  left_widget.py  main.py  right_widget.py  run_test.sh  setting.py  tips.py  top_widget.py  ui.py  view_api.py  views.py
test/: model_test.ipynb  start_ipython.sh
tests/: conftest.py  helpers.py  test_album_model.py  test_argparse.py  test_bench.py  test_cmds.py  test_collection.py  test_config.py  test_dsl.py  test_fuoexec.py  test_i18n.py  test_library.py  test_live_lyric.py  test_media.py  test_model.py  test_model_base.py  test_model_uri.py  test_model_v2.py  test_netease_model.py  test_nowplaying.py  test_player.py  test_player_bar.py  test_plugin.py  test_protocol.py  test_provider.py  test_reader.py  test_serializers.py  test_signal.py  test_task.py  test_utils.py  test_xiami_model.py
themes/: default.qss
widgets/: login_dialog.py  music_table_widget.py
(+610 files in other folders)
