[project]
name = "feeluown"
dynamic = ["version"]
description = "*nix music player"
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0-or-later"
authors = [{ name = "feeluown", email = "yinshaowen241@gmail.com" }]
keywords = ['media', 'player', 'application', 'PyQt6', 'music']
classifiers = [
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'Environment :: X11 Applications :: Qt',
    "Topic :: Multimedia :: Sound/Audio",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
urls = { "homepage" = "https://github.com/feeluown/FeelUOwn", "source" = "https://github.com/feeluown/FeelUOwn" }

requires-python = ">=3.10"
# FIXME: depends on PyQt6
# - PyQt6.QtWidgets/QtCore/QtGui
# - PyQt6.QtSvg
# - PyQt6.QtOpenGL
#
# The feeluown.compat module will choose the right package
# for different python version
dependencies = [
    'janus',
    'requests',
    'qasync',
    'tomlkit',
    'packaging',
    'pydantic>=1.10', # v1 and v2 are both ok.
    'mutagen>=1.37',
    "fluent-runtime>=0.4.0",
    "langcodes>=3.5.1",
]

[project.optional-dependencies]
battery = [
    "fuo-netease>=1.0.8",
    "fuo-qqmusic>=1.0.16",
    "fuo-ytmusic>=0.4.16",
    # "fuo-kuwo>=0.1.1",
    # https://github.com/BruceZhang1993/feeluown-bilibili
    "feeluown-bilibili>=0.5.4",
]
ai = ["langchain[openai]>=1.0"]
qt = ["PyQt6"]
macOS = ["aionowplaying>=0.10"]
win32 = ["pyshortcuts", "aionowplaying>=0.10"]
jsonrpc = ["json-rpc"]
webserver = ["sanic", "json-rpc"]
webengine = ["PyQt6-WebEngine"]
cookies = ["yt-dlp"]
ytdl = ["yt-dlp"]
# Sync this with `dependency-groups.dev` below for backward compatibility.
# So that users using `pip install .[dev]` can get the same packages.
dev = [
    "pyinstaller",
    "flake8",
    "Flake8-pyproject",
    "pylint",
    "mypy",
    "pyqt5-stubs",
    "pytest>=9.0",
    "pytest-runner",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-qt",
    "pytest-mock",
    "pytest-benchmark>=3.4.1",
    "sphinx",
    "sphinx_rtd_theme",
]

[dependency-groups]
dev = [
    # packaging
    "pyinstaller",
    # lint
    "flake8",
    "Flake8-pyproject",
    "pylint",
    "mypy",
    # pyqt5-stubs seems more accurate than the stubs packaged in PyQt6 package.
    # For example, the stubs in PyQt6 has wrong type hint for Qt.ItemFlag.ItemIsSelectable.
    # Some pyqt5 package installed by system package manager may not
    # contain stubs.
    "pyqt5-stubs",
    # unittest
    "pytest>=9.0",
    "pytest-runner",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-qt",
    "pytest-mock",
    "pytest-benchmark>=3.4.1",
    # docs
    "sphinx",
    "sphinx_rtd_theme",
]

[project.scripts]
feeluown = "feeluown.__main__:main"
fuo = "feeluown.__main__:main"
feeluown-genicon = "feeluown.cli.install:generate_icon"

[project.entry-points]
"fuo.plugins_v1" = { local = "feeluown.local" }
# https://pyinstaller.org/en/stable/hooks.html
"pyinstaller40" = { hook-dirs = "feeluown.pyinstaller.hook:get_hook_dirs" }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Setuptools configuration
[tool.setuptools.dynamic]
version = { attr = "feeluown.__version__" }
[tool.setuptools.packages.find]
exclude = ['tests*']
[tool.setuptools.package-data]
"*" = [
    'nowplaying/linux/*.xml',
    'gui/assets/icons/*.png',
    'gui/assets/icons/*.ico',
    'gui/assets/icons/*.icns',
    'gui/assets/themes/*.qss',
    'gui/assets/themes/*.colors',
    'i18n/assets/*/*.ftl',
]

# ruff configuration
[tool.ruff.lint.pycodestyle]
max-line-length = 89

# yapf configuration
[tool.yapf]
column_limit = 89
based_on_style = "pep8"
coalesce_brackets = true
dedent_closing_brackets = true

# mypy configuration
[tool.mypy]
disable_error_code = ["import-untyped"]
[[tool.mypy.overrides]]
module = ["feeluown.mpv", "feeluown.gui.helpers"]
ignore_errors = true

# pytest configuration
[tool.pytest]
minversion = "9.0"
filterwarnings = ["ignore:use feeluown.*?:DeprecationWarning"]
addopts = [
    "-q",
    "--ignore=docs/",
    "--ignore-glob=*/**/mpv*.py",
    "--ignore=feeluown/nowplaying/",
    "--ignore=feeluown/gui/",
    "--ignore=feeluown/webserver/",
    "--ignore=examples/",
    "--ignore=pyinstaller_hooks/",
    "--ignore=research/",
    "--benchmark-skip",
    "--cov-report=",
    "--cov=feeluown",
    "--doctest-modules",
]
# FIXME: does this work?
asyncio_default_fixture_loop_scope = "function"

# flake8 configuration (via flake8-pyproject)
[tool.flake8]
max-line-length = 89
exclude = "feeluown/mpv.py"
extend-ignore = ["E203", "E402"]
