[bdist_wheel]
universal=0

[metadata]
description_file = README.md

[pep8]
ignore = E402

[flake8]
max-line-length = 89

[aliases]
test = pytest

[tool:pytest]
# ignore DeprecationWarning raised by feeluown
filterwarnings =
    ignore:use feeluown.*?:DeprecationWarning
addopts = -q
          --ignore=docs/
          --ignore-glob=*/**/mpv*.py
          --ignore=feeluown/nowplaying/
          --ignore=feeluown/gui/
          --ignore=examples/
          --ignore=pyinstaller_hooks/
          --ignore=research/
          --benchmark-skip
          --cov-report=
          --cov=feeluown
          --doctest-modules
[mypy-mpv]
ignore_errors = True
[mypy-feeluown.models.*]
ignore_errors = True
