[bdist_wheel]
universal=0

[metadata]
description_file = README.md

[pep8]
ignore = E402

[flake8]
max-line-length = 89
exclude = feeluown/mpv.py

[yapf]
column_limit = 89
based_on_style = pep8
coalesce_brackets = true
dedent_closing_brackets = true

[aliases]
test = pytest

[tool:pytest]
# ignore DeprecationWarning raised by feeluown
filterwarnings =
    ignore:use feeluown.*?:DeprecationWarning
addopts = -q
          --ignore=docs/
          --ignore-glob=*/**/mpv*.py
          --ignore=feeluown/nowplaying/
          --ignore=feeluown/gui/
          --ignore=feeluown/webserver/
          --ignore=examples/
          --ignore=pyinstaller_hooks/
          --ignore=research/
          --benchmark-skip
          --cov-report=
          --cov=feeluown
          --doctest-modules
[mypy-feeluown.mpv]
ignore_errors = True
