[bdist_wheel]
universal=0

[metadata]
description_file = README.md

[pep8]
ignore = E402

[flake8]
max-line-length = 89
exclude = feeluown/mpv.py

[mypy]
disable_error_code = import-untyped

[yapf]
column_limit = 89
based_on_style = pep8
coalesce_brackets = true
dedent_closing_brackets = true

[aliases]
test = pytest

[tool:pytest]
# ignore DeprecationWarning raised by feeluown
filterwarnings =
    ignore:use feeluown.*?:DeprecationWarning

# marshmallow may be not installed on some environment
# If you want to ignore the warning in local envinronment,
# you can run pytest like the following::
#   pytest tests/ -W ignore::marshmallow.warnings.RemovedInMarshmallow4Warning
addopts = -q
          --ignore=docs/
          --ignore-glob=*/**/mpv*.py
          --ignore=feeluown/nowplaying/
          --ignore=feeluown/gui/
          --ignore=feeluown/webserver/
          --ignore=examples/
          --ignore=pyinstaller_hooks/
          --ignore=research/
          --benchmark-skip
          --cov-report=
          --cov=feeluown
          --doctest-modules
asyncio_default_fixture_loop_scope = function
[mypy-feeluown.mpv]
ignore_errors = True

# I don't know how to type hint mixin class which is related to PyQt5.
[mypy-feeluown.gui.helpers]
ignore_errors = True
